# ai-teacher-toolkit

./: .gitignore  README.md  ai_teacher_cli.py  pyproject.toml
mcp-manager/: mcp_hub.py
one-click-env/: fix-env.ps1
video-pipeline/: generate_3d_kg.py
