[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-teacher-toolkit"
version = "0.1.0"
description = "AI 教师工具箱 — 环境检测修复 · MCP 管理 · 视频脚本 · 飞书部署"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Teacher Team"},
]

dependencies = [
    "rich>=13.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
ai-teacher = "ai_teacher_cli:main"

[tool.setuptools]
py-modules = ["ai_teacher_cli"]
